chore: architecture sync — adopt local snapshot as source of truth
Recovers ~31 entity files, repos, controllers, frontend hooks, CDK additions,
and the full V1–V10 migration timeline that lived in the local working tree
but were never committed. The aspirational architecture documented in earlier
CLAUDE.md drafts (loan_status_history, closing entities, MISMO importer,
useDraftAutosave, assigned-LO assignments, Object-Lock retention plumbing,
etc.) was real work — it just hadn't reached origin/main.

This commit converges origin/main onto that local snapshot as the single
authoritative state. The previous origin/main commits (Phases A–D as I
authored them) are superseded — their concepts are still represented, just
expressed in the local code layout (different migration filenames, different
entity shapes, different MismoExporter implementation).

Net effect:

Schema (Flyway) — 5 migrations replaced with 10:
  V1__init.sql                       (different content)
  V2__loan_status_history.sql        + entities + repo (was missing on main)
  V3__users_and_assignments.sql      (assigned_lo_id + agent join tables)
  V4__document_visibility.sql
  V5__assets.sql
  V6__entity_audit_columns.sql
  V7__document_s3_fields.sql
  V8__loan_identifiers.sql           (LP R-number, MERS_MIN, etc.)
  V9__mismo_imports.sql              + audit entity
  V10__closing_information.sql       + ClosingInformation/ClosingFee entities

Backend additions:
  controller/HealthController        — fixes /api/health 500
  controller/MeController            — current-user + borrower's loans
  mismo/MismoImporter                — DOM-based, namespace-agnostic XPath
  model/LoanStatus + LoanStatusHistory + repo
  model/LoanAgent + repo             — for per-loan ownership
  model/MismoImport + repo           — import audit
  model/ClosingInformation + ClosingFee + repos
  config: application-dev.properties / application-prod.properties

Frontend additions:
  hooks/useDraftAutosave.js          — sessi